<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dz.esi.athena.Signupactivity"
    android:background="@drawable/background2"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/medium"
        android:text="@string/create_an_account"
        android:textColor="@color/blueish"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/medium"
        android:text="@string/create_a_new_account_to"
        android:textColor="@color/whitish"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/take_advantage_of_all_our_features"
        android:textColor="@color/whitish"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licenseExpiry"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/whitish"
        android:ems="10"
        android:hint="@string/first_name"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/email"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="188dp"
        android:background="@color/whitish"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@color/whitish"
        android:ems="10"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/whitish"
        android:ems="10"
        android:hint="@string/last_name"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/licenseID"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/whitish"
        android:ems="10"
        android:hint="@string/your_license_id_number"
        android:textColorHint="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/licenseExpiry"
        android:layout_width="324dp"
        android:layout_height="40dp"
        android:background="@color/whitish"
        android:ems="10"
        android:hint="@string/your_license_expiry_date_dd_mm_yyyy"
        android:inputType="textPersonName"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licenseID"
        app:layout_constraintVertical_bias="0.055" />

</androidx.constraintlayout.widget.ConstraintLayout>